Name: Hastodon
Version: 0.2.0
Synopsis: mastodon client module for Haskell
Category: Web
Description: mastodon client module for Haskell
Author: Ryo Okubo
Maintainer: syucream1031@gmail.com
Homepage: https://github.com/syucream/hastodon
cabal-version: >= 1.10

License: MIT
license-file: LICENSE
Stability: experimental
build-type: Simple

Source-repository head
  type: git
  location: https://github.com/syucream/hastodon.git

Library
  default-language: Haskell2010
  Build-Depends: base >= 4.5 && < 5,
                 aeson,
                 bytestring,
                 http-types,
                 http-conduit,
                 MissingH,
                 text

  Exposed-Modules: Web.Hastodon
  Other-Modules:
