Name: Hastodon
Version: 0.6.0
Synopsis: mastodon client module for Haskell
Category: Web
Description: mastodon client module for Haskell
Author: Ryo Okubo
Maintainer: syucream1031@gmail.com
Homepage: https://github.com/syucream/hastodon
cabal-version: >= 1.10

License: MIT
license-file: LICENSE
Stability: experimental
build-type: Simple

Source-repository head
  type: git
  location: https://github.com/syucream/hastodon.git

Library
  default-language: Haskell2010
  Build-Depends: base >= 4.5 && < 5,
                 aeson,
                 attoparsec,
                 bytestring,
                 conduit >= 1.3.0,
                 exceptions,
                 mime-types,
                 http-types,
                 http-client,
                 http-conduit,
                 MissingH,
                 resourcet,
                 text,
                 transformers,
                 containers

  Exposed-Modules: Web.Hastodon,
                   Web.Hastodon.Option

  Other-Modules: Web.Hastodon.API,
                 Web.Hastodon.Streaming,
                 Web.Hastodon.Types,
                 Web.Hastodon.Util

